[gd_scene load_steps=4 format=3 uid="uid://cxb6b42bgqvel"]

[ext_resource type="Script" uid="uid://cckc0hm277iv3" path="res://ui/story/shop/shop_weapon_row.gd" id="1_03bpo"]
[ext_resource type="PackedScene" uid="uid://dfqpo363uk5q1" path="res://ui/story/shop/weapon_buy.tscn" id="1_7inv6"]
[ext_resource type="PackedScene" uid="uid://bfei0rked6csm" path="res://ui/story/shop/ammo_purchase.tscn" id="2_03bpo"]

[node name="ShopWeaponRow" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 20
script = ExtResource("1_03bpo")

[node name="Spacer" type="Control" parent="."]
layout_mode = 2

[node name="DescriptionContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Weapon" type="Label" parent="DescriptionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Leadball Shotgun"

[node name="CostLabel" type="Label" parent="DescriptionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="WeaponBuy" parent="." instance=ExtResource("1_7inv6")]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
alignment = 2

[node name="AmmoPurchase" parent="." instance=ExtResource("2_03bpo")]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
alignment = 2

[node name="Spacer2" type="Control" parent="."]
layout_mode = 2
